# email-triage-openenv

./: Dockerfile  README.md  __init__.py  architecture.md  client.py  example_agent.py  guidelines.md  inference.py  inference_results.json  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_baseline.py
server/: __init__.py  app.py  email_triage_environment.py  emails_data.py
